# uintr_oneway

./: CMakeLists.txt
source/: CMakeLists.txt
source/common/: benchmarks.c  benchmarks.h  common.h  kfifo.h  process.c  sockets.c  sockets.h
source/domain/: client.c  server.c
source/eventfd/: eventfd-uni.c
source/fifo/: client.c  server.c
source/mmap/: client.c  server.c
source/mq/: client.c  server.c
source/pipe/: pipe.c
source/shm/: client.c  server.c
source/signal/: client.c  server.c
source/tcp/: client.c  server.c
source/uintr-pro/: CMakeLists.txt  client.c  server.c  uintr-pro.c
source/uintrfd/: uintrfd-uni.c
